tests/sksl/errors/ErrorsInDeadCode.dsl.glsl
### Compilation failed:

error: unknown identifier 'x'

error: cannot assign to this expression

error: unknown identifier 'x'

error: cannot assign to this expression

error: unknown identifier 'x'

error: unknown identifier 'x'

6 errors
